# terminal

./: .gitignore  AGENTS.md  BUNNYSHELL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html
BunnyshellApp/: BunnyshellApp.entitlements  Package.swift  project.yml
BunnyshellApp/BunnyshellApp.xcodeproj/: project.pbxproj
BunnyshellApp/Sources/BunnyshellApp/: App.swift  AppViewModel.swift  ContentView.swift  EditorView.swift  ExplorerView.swift  SearchView.swift  TerminalSession.swift  TerminalView.swift  Theme.swift
BunnyshellApp/scripts/: sync_ghosttykit_xcframework.sh
bindings/: bunnyshell_core.swift  bunnyshell_coreFFI.h
bunnyshell-core/: Cargo.toml
bunnyshell-core/src/: fs.rs  lib.rs  renderer.rs  surface_registry.rs  workspace.rs
bunnyshell-core/src/pty/: da_filter.rs  mod.rs  session.rs  shell_init.rs
bunnyshell-core/src/pty/scripts/: init.fish  profile.ps1  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs  native_surface.rs
src-tauri/src/modules/: workspace.rs
src/app/: App.tsx
src/components/: PaneTreeView.tsx
src/components/ai-elements/: tool.tsx
src/lib/: fonts.ts
src/modules/ai/: config.ts
src/modules/editor/: EditorPane.tsx  EditorStack.tsx  GitDiffStack.tsx  index.ts
src/modules/git-history/: GitHistoryPane.tsx  GitHistoryStack.tsx
src/settings/: SettingsApp.tsx
src/styles/: globals.css
(+87 files in other folders)
