[package]
name = "bunnyshell-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "bunnyshell_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tempfile = "3"
libc = "0.2"
wgpu = "22.0.0"
glyphon = "0.6.0"
raw-window-handle = "0.6"
cosmic-text = "0.12.1"
pollster = "0.3"
once_cell = "1.18.0"



